        Google Maps support! There is a new index type,
        wiki.cgi?action=index;format=map, and maps appear in the node listings
        (the latter feature is user-configurable).
        Fix <link> in RSS to point to RecentChanges page, not the feed itself.
        #67 Default website for a page is now http://
        Fix mod_perl redirect bug.
        Fix test failure with CGI.pm 3.16.

0.51    15 November 2005
        Important changes:
          * The preferred way to get RecentChanges is now to pass the CGI the
            parameter "action=rc", rather than just using the page name
            "RecentChanges". However, this method will still work for the time
            being. Similarly, the URL parameter for the RecentChanges RSS feed 
            has changed from "action=rss" to "action=rc;format=rss". Requests 
            for the former will be redirected to the latter.

        New features:
          * When trying to view a non-existent node, you will now be presented
            with a message asking if you want to create that node, rather than
            a blank page.
          * New "summary" metadata field for one-line summaries of nodes:
            - Add summary field to RDF as dc:description.
            - Show node summary in search results.
          * New "format=raw" option for outputting wiki text of a node. 
          * RSS feed now contains DOAP (http://usefulinc.com/doap) metadata.
        
        RDF bugfixes:
          * Locales, address and summary fields now XML-escaped properly.
          * Add "address" field that was missing from the RDF node view.
          * Update URL for Dublin Core elements in RDF index view.
          * Fix URL in the RSS <channel> element to point to the RSS URL,
            not the RecentChanges page URL.
        
        Search bugfixes:
          * Fix bug that was breaking coordinate entry fields on search page if 
            lat/lon was being used.