@@ -14,6 +14,7 @@
         #67 Default website for a page is now http://
         Fix mod_perl redirect bug.
         Fix test failure with CGI.pm 3.16.
+        #87 Edit on mirrored pages now goes to source site 
 
 0.51    15 November 2005
         Important changes:
